Fixed alignment of icon in *Special.css files.
git-svn-id: http://ala-portal.googlecode.com/svn/trunk/ala-portal-web@256 1ef1b718-b4f5-11dd-90a5-ed332e521da9

--- a/src/main/webapp/skins/ala/countriesSpecial.css
+++ b/src/main/webapp/skins/ala/countriesSpecial.css
@@ -1,5 +1,5 @@
 #twopartheader {
-    background: transparent url(images/ALA-doc-3-regions.gif) no-repeat scroll 0% 65%;
+    background: transparent url(images/ALA-doc-3-regions.gif) no-repeat scroll 0% 10px;
 }
 /* hack for IE */
 * html #twopartheader {
