--- a/src/main/webapp/skins/ala/occurrenceSpecial.css
+++ b/src/main/webapp/skins/ala/occurrenceSpecial.css
@@ -1,6 +1,6 @@
 #twopartheader    {
 	/* moved to speciesGlobal.css */
-	background: transparent url(images/ALA-doc-3-occurrences.gif) no-repeat scroll 0% 65%;
+	background: transparent url(images/ALA-doc-3-occurrences.gif) no-repeat scroll 0% 10px;
 }
 /* hack for IE */
 * html #twopartheader {
