--- a/src/main/webapp/skins/ala/settingsSpecial.css
+++ b/src/main/webapp/skins/ala/settingsSpecial.css
@@ -5,7 +5,7 @@
 */
 #twopartheader    {
     /* moved to speciesGlobal.css */
-    background: transparent url(images/ALA-doc-3-settings.gif) no-repeat scroll 0% 65%;
+    background: transparent url(images/ALA-doc-3-settings.gif) no-repeat scroll 0% 10px;
 }
 /* hack for IE */
 * html #twopartheader {
