--- a/src/main/webapp/skins/ala/tutorialSpecial.css
+++ b/src/main/webapp/skins/ala/tutorialSpecial.css
@@ -3,7 +3,7 @@ h1 , h2 , h3 { margin: 0 0 0 96px; padding: 20px 0 0 0 ; font-size: 1.1em ; }
 h4 , h5 , h6 { margin: 0 0 0 96px; padding: 20px 0 0 0 ; font-size: 1.0em ; }
 */
 #twopartheader    {
-    background: transparent url(images/ALA-doc-3-about.gif) no-repeat scroll 0% 65%;
+    background: transparent url(images/ALA-doc-3-about.gif) no-repeat scroll 0% 10px;
 }
 /* hack for IE */
 * html #twopartheader {
